@@ -32,7 +32,7 @@ EXAMPLE1
      print "Count of Czech CPAN authors: $count\n";
 
      # Output:
-     # Count of Czech CPAN authors: 34
+     # Count of Czech CPAN authors: 35
 
 EXAMPLE2
      # Pragmas.
@@ -83,11 +83,12 @@ EXAMPLE2
      #     [26] "STRAKA",
      #     [27] "TKR",
      #     [28] "TRIPIE",
-     #     [29] "VASEKD",
-     #     [30] "YENYA",
-     #     [31] "ZABA",
-     #     [32] "ZEMAN",
-     #     [33] "ZOUL"
+     #     [29] "TYNOVSKY",
+     #     [30] "VASEKD",
+     #     [31] "YENYA",
+     #     [32] "ZABA",
+     #     [33] "ZEMAN",
+     #     [34] "ZOUL"
      # ]
 
 DEPENDENCIES
