@@ -1,4 +1,5 @@
 0.18
+ - Add TYNOVSKY CPAN account.
 
 0.17 2015-02-12T19:02:23+01:00
  - Add MICHALS CPAN account.
